fix button text alignment on card

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -471,12 +471,14 @@ $ios-side-menu-title-height: 120px;
 
     .card-button {
       $size: 45px;
+      $text-offset: 20px;
       cursor: pointer;
       width: $size;
       height: $size;
       border: 1px solid;
       border-radius: 50%;
       margin: 0px 10px;
+      padding-top: -5px;
       font-size: 13px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
@@ -490,7 +492,8 @@ $ios-side-menu-title-height: 120px;
       -webkit-justify-content: center; /* Safari */
 
       .button-detail {
-        width: $size;
+        width: $size + $text-offset;
+        margin-left: -($text-offset / 2);
         text-align: center;
         @include uppercase-bold-font();
         position: fixed;
@@ -513,6 +516,7 @@ $ios-side-menu-title-height: 120px;
       width: $size;
       height: $size;
       .button-detail {
+        margin-left: 0;
         margin-top: 28px;
         width: $size;
       }
